--- a/lab09/solution-09-code-generation.ipynb
+++ b/lab09/solution-09-code-generation.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -225,90 +225,96 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m======================================= test session starts =======================================\u001b[0m\n",
-      "platform win32 -- Python 3.10.10, pytest-8.3.4, pluggy-1.5.0 -- c:\\Users\\ricca\\AppData\\Local\\Programs\\Python\\Python310\\python.exe\n",
+      "platform win32 -- Python 3.11.9, pytest-9.0.1, pluggy-1.6.0 -- c:\\Users\\dorot\\AppData\\Local\\Programs\\Python\\Python311\\python.exe\n",
       "cachedir: .pytest_cache\n",
-      "rootdir: c:\\Users\\ricca\\Documents\\GitHub\\llm\\lab09\n",
-      "plugins: anyio-4.6.2.post1\n",
+      "rootdir: c:\\Users\\dorot\\OneDrive - Politecnico di Torino\\Desktop\\Magistrale\\Secondo Anno Magistrale\\Large Language Models for Software Engineering\\LLM Labs\\lab09\n",
+      "plugins: anyio-4.11.0\n",
       "\u001b[1mcollecting ... \u001b[0mcollected 14 items\n",
       "\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_valid_grades \u001b[32mPASSED\u001b[0m\u001b[32m                              [  7%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_valid_grades_with_30laude \u001b[32mPASSED\u001b[0m\u001b[32m                 [ 14%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_lowest_and_highest_valid_grades \u001b[32mPASSED\u001b[0m\u001b[32m           [ 21%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_all_30laude \u001b[32mPASSED\u001b[0m\u001b[32m                               [ 28%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_more_than_six_grades \u001b[32mPASSED\u001b[0m\u001b[32m                      [ 35%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_less_than_six_grades \u001b[32mPASSED\u001b[0m\u001b[32m                      [ 42%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_invalid_grade_too_low \u001b[32mPASSED\u001b[0m\u001b[32m                     [ 50%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_invalid_grade_too_high \u001b[32mPASSED\u001b[0m\u001b[32m                    [ 57%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_all_grades_are_the_same \u001b[32mPASSED\u001b[0m\u001b[32m                   [ 64%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_all_grades_except_highest_and_lowest \u001b[32mPASSED\u001b[0m\u001b[32m      [ 71%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_non_numeric_input_string \u001b[31mFAILED\u001b[0m\u001b[31m                  [ 78%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_non_numeric_input_none \u001b[31mFAILED\u001b[0m\u001b[31m                    [ 85%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_non_numeric_input_boolean \u001b[32mPASSED\u001b[0m\u001b[31m                 [ 92%]\u001b[0m\n",
-      "t_fa820e0db4c74c9f965206c494c19624.py::test_non_numeric_input_mixed \u001b[31mFAILED\u001b[0m\u001b[31m                   [100%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_valid_grades \u001b[32mPASSED\u001b[0m\u001b[32m                              [  7%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_valid_grades_with_30laude \u001b[32mPASSED\u001b[0m\u001b[32m                 [ 14%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_lowest_and_highest_valid_grades \u001b[32mPASSED\u001b[0m\u001b[32m           [ 21%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_all_30laude \u001b[32mPASSED\u001b[0m\u001b[32m                               [ 28%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_more_than_six_grades \u001b[32mPASSED\u001b[0m\u001b[32m                      [ 35%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_less_than_six_grades \u001b[32mPASSED\u001b[0m\u001b[32m                      [ 42%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_invalid_grade_too_low \u001b[32mPASSED\u001b[0m\u001b[32m                     [ 50%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_invalid_grade_too_high \u001b[32mPASSED\u001b[0m\u001b[32m                    [ 57%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_all_grades_are_the_same \u001b[32mPASSED\u001b[0m\u001b[32m                   [ 64%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_all_grades_except_highest_and_lowest \u001b[32mPASSED\u001b[0m\u001b[32m      [ 71%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_non_numeric_input_string \u001b[31mFAILED\u001b[0m\u001b[31m                  [ 78%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_non_numeric_input_none \u001b[31mFAILED\u001b[0m\u001b[31m                    [ 85%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_non_numeric_input_boolean \u001b[32mPASSED\u001b[0m\u001b[31m                 [ 92%]\u001b[0m\n",
+      "t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::test_non_numeric_input_mixed \u001b[31mFAILED\u001b[0m\u001b[31m                   [100%]\u001b[0m\n",
       "\n",
       "============================================ FAILURES =============================================\n",
       "\u001b[31m\u001b[1m__________________________________ test_non_numeric_input_string __________________________________\u001b[0m\n",
       "\n",
-      "    \u001b[0m\u001b[94mdef\u001b[39;49;00m \u001b[92mtest_non_numeric_input_string\u001b[39;49;00m():\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[0m\u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mtest_non_numeric_input_string\u001b[39;49;00m():\u001b[90m\u001b[39;49;00m\n",
       "        grades = [\u001b[33m\"\u001b[39;49;00m\u001b[33ma\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, \u001b[94m25\u001b[39;49;00m, \u001b[94m30\u001b[39;49;00m, \u001b[94m33\u001b[39;49;00m, \u001b[94m22\u001b[39;49;00m, \u001b[94m28\u001b[39;49;00m]\u001b[90m\u001b[39;49;00m\n",
       "        \u001b[94mwith\u001b[39;49;00m pytest.raises(\u001b[96mValueError\u001b[39;49;00m):\u001b[90m\u001b[39;49;00m\n",
       ">           compute_average(grades)\u001b[90m\u001b[39;49;00m\n",
       "\n",
-      "\u001b[1m\u001b[31mC:\\Users\\ricca\\AppData\\Local\\Temp\\ipykernel_13408\\1545394692.py\u001b[0m:63: \n",
+      "\u001b[1m\u001b[31mC:\\Users\\dorot\\AppData\\Local\\Temp\\ipykernel_40580\\1545394692.py\u001b[0m:63: \n",
       "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _\n",
-      "\u001b[1m\u001b[31mC:\\Users\\ricca\\AppData\\Local\\Temp\\ipykernel_13408\\2310612612.py\u001b[0m:20: in compute_average\n",
+      "\u001b[1m\u001b[31mC:\\Users\\dorot\\AppData\\Local\\Temp\\ipykernel_40580\\2310612612.py\u001b[0m:20: in compute_average\n",
       "    \u001b[0m\u001b[94mif\u001b[39;49;00m \u001b[95mnot\u001b[39;49;00m \u001b[96mall\u001b[39;49;00m(\u001b[94m18\u001b[39;49;00m <= grade <= \u001b[94m33\u001b[39;49;00m \u001b[94mfor\u001b[39;49;00m grade \u001b[95min\u001b[39;49;00m grades):\u001b[90m\u001b[39;49;00m\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[90m\u001b[39;49;00m\n",
       "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _\n",
       "\n",
-      ".0 = <list_iterator object at 0x000001F258D38A00>\n",
+      ".0 = <list_iterator object at 0x00000230382A1420>\n",
       "\n",
       ">   \u001b[0m\u001b[94mif\u001b[39;49;00m \u001b[95mnot\u001b[39;49;00m \u001b[96mall\u001b[39;49;00m(\u001b[94m18\u001b[39;49;00m <= grade <= \u001b[94m33\u001b[39;49;00m \u001b[94mfor\u001b[39;49;00m grade \u001b[95min\u001b[39;49;00m grades):\u001b[90m\u001b[39;49;00m\n",
+      "               ^^^^^^^^^^^^^^^^^\u001b[90m\u001b[39;49;00m\n",
       "\u001b[1m\u001b[31mE   TypeError: '<=' not supported between instances of 'int' and 'str'\u001b[0m\n",
       "\n",
-      "\u001b[1m\u001b[31mC:\\Users\\ricca\\AppData\\Local\\Temp\\ipykernel_13408\\2310612612.py\u001b[0m:20: TypeError\n",
+      "\u001b[1m\u001b[31mC:\\Users\\dorot\\AppData\\Local\\Temp\\ipykernel_40580\\2310612612.py\u001b[0m:20: TypeError\n",
       "\u001b[31m\u001b[1m___________________________________ test_non_numeric_input_none ___________________________________\u001b[0m\n",
       "\n",
-      "    \u001b[0m\u001b[94mdef\u001b[39;49;00m \u001b[92mtest_non_numeric_input_none\u001b[39;49;00m():\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[0m\u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mtest_non_numeric_input_none\u001b[39;49;00m():\u001b[90m\u001b[39;49;00m\n",
       "        grades = [\u001b[94mNone\u001b[39;49;00m, \u001b[94m25\u001b[39;49;00m, \u001b[94m30\u001b[39;49;00m, \u001b[94m33\u001b[39;49;00m, \u001b[94m22\u001b[39;49;00m, \u001b[94m28\u001b[39;49;00m]\u001b[90m\u001b[39;49;00m\n",
       "        \u001b[94mwith\u001b[39;49;00m pytest.raises(\u001b[96mValueError\u001b[39;49;00m):\u001b[90m\u001b[39;49;00m\n",
       ">           compute_average(grades)\u001b[90m\u001b[39;49;00m\n",
       "\n",
-      "\u001b[1m\u001b[31mC:\\Users\\ricca\\AppData\\Local\\Temp\\ipykernel_13408\\1545394692.py\u001b[0m:68: \n",
+      "\u001b[1m\u001b[31mC:\\Users\\dorot\\AppData\\Local\\Temp\\ipykernel_40580\\1545394692.py\u001b[0m:68: \n",
       "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _\n",
-      "\u001b[1m\u001b[31mC:\\Users\\ricca\\AppData\\Local\\Temp\\ipykernel_13408\\2310612612.py\u001b[0m:20: in compute_average\n",
+      "\u001b[1m\u001b[31mC:\\Users\\dorot\\AppData\\Local\\Temp\\ipykernel_40580\\2310612612.py\u001b[0m:20: in compute_average\n",
       "    \u001b[0m\u001b[94mif\u001b[39;49;00m \u001b[95mnot\u001b[39;49;00m \u001b[96mall\u001b[39;49;00m(\u001b[94m18\u001b[39;49;00m <= grade <= \u001b[94m33\u001b[39;49;00m \u001b[94mfor\u001b[39;49;00m grade \u001b[95min\u001b[39;49;00m grades):\u001b[90m\u001b[39;49;00m\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[90m\u001b[39;49;00m\n",
       "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _\n",
       "\n",
-      ".0 = <list_iterator object at 0x000001F258E28A90>\n",
+      ".0 = <list_iterator object at 0x000002303834CF70>\n",
       "\n",
       ">   \u001b[0m\u001b[94mif\u001b[39;49;00m \u001b[95mnot\u001b[39;49;00m \u001b[96mall\u001b[39;49;00m(\u001b[94m18\u001b[39;49;00m <= grade <= \u001b[94m33\u001b[39;49;00m \u001b[94mfor\u001b[39;49;00m grade \u001b[95min\u001b[39;49;00m grades):\u001b[90m\u001b[39;49;00m\n",
+      "               ^^^^^^^^^^^^^^^^^\u001b[90m\u001b[39;49;00m\n",
       "\u001b[1m\u001b[31mE   TypeError: '<=' not supported between instances of 'int' and 'NoneType'\u001b[0m\n",
       "\n",
-      "\u001b[1m\u001b[31mC:\\Users\\ricca\\AppData\\Local\\Temp\\ipykernel_13408\\2310612612.py\u001b[0m:20: TypeError\n",
+      "\u001b[1m\u001b[31mC:\\Users\\dorot\\AppData\\Local\\Temp\\ipykernel_40580\\2310612612.py\u001b[0m:20: TypeError\n",
       "\u001b[31m\u001b[1m__________________________________ test_non_numeric_input_mixed ___________________________________\u001b[0m\n",
       "\n",
-      "    \u001b[0m\u001b[94mdef\u001b[39;49;00m \u001b[92mtest_non_numeric_input_mixed\u001b[39;49;00m():\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[0m\u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mtest_non_numeric_input_mixed\u001b[39;49;00m():\u001b[90m\u001b[39;49;00m\n",
       "        grades = [\u001b[94m18\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33m25\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, \u001b[94m30\u001b[39;49;00m, \u001b[94m33\u001b[39;49;00m, \u001b[94m22\u001b[39;49;00m, \u001b[94m28\u001b[39;49;00m]\u001b[90m\u001b[39;49;00m\n",
       "        \u001b[94mwith\u001b[39;49;00m pytest.raises(\u001b[96mValueError\u001b[39;49;00m):\u001b[90m\u001b[39;49;00m\n",
       ">           compute_average(grades)\u001b[90m\u001b[39;49;00m\n",
       "\n",
-      "\u001b[1m\u001b[31mC:\\Users\\ricca\\AppData\\Local\\Temp\\ipykernel_13408\\1545394692.py\u001b[0m:78: \n",
+      "\u001b[1m\u001b[31mC:\\Users\\dorot\\AppData\\Local\\Temp\\ipykernel_40580\\1545394692.py\u001b[0m:78: \n",
       "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _\n",
-      "\u001b[1m\u001b[31mC:\\Users\\ricca\\AppData\\Local\\Temp\\ipykernel_13408\\2310612612.py\u001b[0m:20: in compute_average\n",
+      "\u001b[1m\u001b[31mC:\\Users\\dorot\\AppData\\Local\\Temp\\ipykernel_40580\\2310612612.py\u001b[0m:20: in compute_average\n",
       "    \u001b[0m\u001b[94mif\u001b[39;49;00m \u001b[95mnot\u001b[39;49;00m \u001b[96mall\u001b[39;49;00m(\u001b[94m18\u001b[39;49;00m <= grade <= \u001b[94m33\u001b[39;49;00m \u001b[94mfor\u001b[39;49;00m grade \u001b[95min\u001b[39;49;00m grades):\u001b[90m\u001b[39;49;00m\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[90m\u001b[39;49;00m\n",
       "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _\n",
       "\n",
-      ".0 = <list_iterator object at 0x000001F258D39660>\n",
+      ".0 = <list_iterator object at 0x0000023037F39FC0>\n",
       "\n",
       ">   \u001b[0m\u001b[94mif\u001b[39;49;00m \u001b[95mnot\u001b[39;49;00m \u001b[96mall\u001b[39;49;00m(\u001b[94m18\u001b[39;49;00m <= grade <= \u001b[94m33\u001b[39;49;00m \u001b[94mfor\u001b[39;49;00m grade \u001b[95min\u001b[39;49;00m grades):\u001b[90m\u001b[39;49;00m\n",
+      "               ^^^^^^^^^^^^^^^^^\u001b[90m\u001b[39;49;00m\n",
       "\u001b[1m\u001b[31mE   TypeError: '<=' not supported between instances of 'int' and 'str'\u001b[0m\n",
       "\n",
-      "\u001b[1m\u001b[31mC:\\Users\\ricca\\AppData\\Local\\Temp\\ipykernel_13408\\2310612612.py\u001b[0m:20: TypeError\n",
+      "\u001b[1m\u001b[31mC:\\Users\\dorot\\AppData\\Local\\Temp\\ipykernel_40580\\2310612612.py\u001b[0m:20: TypeError\n",
       "\u001b[36m\u001b[1m===================================== short test summary info =====================================\u001b[0m\n",
-      "\u001b[31mFAILED\u001b[0m t_fa820e0db4c74c9f965206c494c19624.py::\u001b[1mtest_non_numeric_input_string\u001b[0m - TypeError: '<=' not supported between instances of 'int' and 'str'\n",
-      "\u001b[31mFAILED\u001b[0m t_fa820e0db4c74c9f965206c494c19624.py::\u001b[1mtest_non_numeric_input_none\u001b[0m - TypeError: '<=' not supported between instances of 'int' and 'NoneType'\n",
-      "\u001b[31mFAILED\u001b[0m t_fa820e0db4c74c9f965206c494c19624.py::\u001b[1mtest_non_numeric_input_mixed\u001b[0m - TypeError: '<=' not supported between instances of 'int' and 'str'\n",
-      "\u001b[31m================================== \u001b[31m\u001b[1m3 failed\u001b[0m, \u001b[32m11 passed\u001b[0m\u001b[31m in 0.14s\u001b[0m\u001b[31m ===================================\u001b[0m\n"
+      "\u001b[31mFAILED\u001b[0m t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::\u001b[1mtest_non_numeric_input_string\u001b[0m - TypeError: '<=' not supported between instances of 'int' and 'str'\n",
+      "\u001b[31mFAILED\u001b[0m t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::\u001b[1mtest_non_numeric_input_none\u001b[0m - TypeError: '<=' not supported between instances of 'int' and 'NoneType'\n",
+      "\u001b[31mFAILED\u001b[0m t_fe2e2bf2bfa34cd2a9d5c76651e65c38.py::\u001b[1mtest_non_numeric_input_mixed\u001b[0m - TypeError: '<=' not supported between instances of 'int' and 'str'\n",
+      "\u001b[31m================================== \u001b[31m\u001b[1m3 failed\u001b[0m, \u001b[32m11 passed\u001b[0m\u001b[31m in 0.76s\u001b[0m\u001b[31m ===================================\u001b[0m\n"
      ]
     }
    ],
@@ -338,13 +344,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82bd2433395949d48c03b99fc74322ad",
+       "model_id": "47e193628dfb4b9cb82faeb0ca325b68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,59 +362,14 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n",
-      "Both `max_new_tokens` (=200) and `max_length`(=300) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "You are a powerful AI assistant capable of generating code based on specific requirements. Please write Python code based on the following requirements:\n",
-      "\n",
-      "### Requirements:\n",
-      "Write a Python function, named compute_average to compute the average of grades. Six grades are passed as parameters. The average must be performed on four grades, excluding the highest and lowest.\n",
-      "    \n",
-      "Args:\n",
-      "    grades (list): A list of six grades, where each grade is between 18 and 33.\n",
-      "    \n",
-      "Returns:\n",
-      "    float: The computed average.\n",
-      "\n",
-      "Examples:\n",
-      "    compute_average([18, 19, 20, 30, 33, 25]) -> 23.5\n",
-      "\n",
-      "\n",
-      "Function prototype:\n",
-      "    def compute_average(grades):\n",
-      "    \n",
-      "### Code:\n",
-      "    def compute_average(grades):\n",
-      "        grades.sort()\n",
-      "        grades.pop(0)\n",
-      "        grades.pop(-1)\n",
-      "        return sum(grades)/len(grades)\n",
-      "\n",
-      "### Test:\n",
-      "    print(compute_average([18, 19, 20, 30, 33, 25]))\n",
-      "\n",
-      "### Output:\n",
-      "    23.5\n",
-      "\n",
-      "### Explanation:\n",
-      "    The function compute_average takes a list of six grades as input.\n",
-      "    The function first sorts the list of grades in ascending order.\n",
-      "    The function then removes the highest and lowest grades from the list.\n",
-      "    The function then calculates the average of the remaining four grades.\n",
-      "    The function returns the average.\n",
-      "\n",
-      "### Test Case 2:\n",
-      "    print(compute_average([18\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -963,7 +924,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
